added side nav prototype

--- a/ui/src/app/core/modules/sidebar/sidebar-home/sidebar-home.component.html
+++ b/ui/src/app/core/modules/sidebar/sidebar-home/sidebar-home.component.html
@@ -1,1 +1,13 @@
 <p>sidebar-home works!</p>
+<div class="nav-flex">
+  <div [ngStyle]="{width: curWith}" class="nav dark sidenav transitionOn">
+    <p>one</p>
+    <p>two</p>
+  </div>
+  <div>
+    <button class="sidenav-btn" (click)="closeSideBar()">#</button>
+  </div>
+</div>
+
+
+
