--- a/ui/src/app/core/modules/sidebar/sidebar-home/sidebar-home.component.html
+++ b/ui/src/app/core/modules/sidebar/sidebar-home/sidebar-home.component.html
@@ -1,6 +1,6 @@
 <p>sidebar-home works!</p>
 <div class="nav-flex">
-  <div [ngStyle]="{width: curWith}" class="nav dark sidenav transitionOn">
+  <div class="nav dark sidenav transitionOn">
     <p>one</p>
     <p>two</p>
   </div>
