added some styling

--- a/ui/src/app/core/modules/sidebar/sidebar-home/sidebar-home.component.html
+++ b/ui/src/app/core/modules/sidebar/sidebar-home/sidebar-home.component.html
@@ -5,7 +5,7 @@
     <p>two</p>
   </div>
   <div>
-    <button class="sidenav-btn" (click)="closeSideBar()">#</button>
+    <button class="sidenav-btn" (click)="closeSideBar()"></button>
   </div>
 </div>
 
