--- a/ui/src/app/core/modules/sidebar/sidebar-home/sidebar-home.component.css
+++ b/ui/src/app/core/modules/sidebar/sidebar-home/sidebar-home.component.css
@@ -7,13 +7,15 @@
 
 .sidenav-btn{
   display: inline-block;
-  border: 1px solid black;
-  /*background-color: #6A128D;*/
+  border: none;
+  border-radius: 0 10px 10px 0;
+  background-color: #384752;
+  height: 40px;
+  width: 10px;
 }
 
 .sidenav{
   height: 90%;
-  /*background-color: #030418;*/
   display: inline-block;
 }
 
@@ -23,7 +25,7 @@
   -ms-transition: .1s;
   -o-transition: .1s;
   transition: .1s;
-  width: 20% !important;
+  width: 35% !important;
 }
 
 .sidenav.transitionOf{
