--- a/ui/src/app/core/modules/sidebar/sidebar-home/sidebar-home.component.html
+++ b/ui/src/app/core/modules/sidebar/sidebar-home/sidebar-home.component.html
@@ -1,8 +1,7 @@
 <p>sidebar-home works!</p>
 <div class="nav-flex">
   <div class="nav dark sidenav transitionOn">
-    <p>one</p>
-    <p>two</p>
+    <app-side-bar-folder>folder-name</app-side-bar-folder>
   </div>
   <div>
     <button class="sidenav-btn" (click)="closeSideBar()"></button>
