--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -13,3 +13,6 @@ body {
   background-color: #293742;
   color: white;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
