added main menu

--- a/ui/src/app/core/modules/header/header-home/header-home.component.html
+++ b/ui/src/app/core/modules/header/header-home/header-home.component.html
@@ -1,1 +1,7 @@
-<p>header-home works!</p>
+<menu class="menu">
+  <a href="#" class="menu_item">HOME</a>
+  <a href="#" class="menu_item">STORE</a>
+  <a href="#" class="menu_item">ABOUT</a>
+  <a href="#" class="menu_item">ANGEBOTE</a>
+  <a href="#" class="menu_item">80%</a>
+</menu>
