--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header-home></app-header-home>
-<app-sidebar-home></app-sidebar-home>
+<app-sidebar-home style="display: none"></app-sidebar-home>
 <router-outlet></router-outlet>
