--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-header-home></app-header-home>
 <app-sidebar-home style="display: none"></app-sidebar-home>
+
+<a routerLink="/blog">to the blog</a>
+
 <router-outlet></router-outlet>
